<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".presentation.screen.wallpaper_details.WallpaperDetailsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_height="match_parent"
        android:background="@color/black">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageViewDetailsImage"
            android:layout_width="300dp"
            android:layout_height="400dp"
            android:layout_marginTop="64dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_forward_arrow" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvViews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="52dp"
            android:layout_marginTop="24dp"
            android:text="@string/views"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewDetailsImage" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvViewsNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="24dp"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/tvViews"
            app:layout_constraintTop_toBottomOf="@+id/imageViewDetailsImage" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDownloads"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="52dp"
            android:layout_marginTop="16dp"
            android:text="@string/downloads"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvViews" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDownloadsNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/tvDownloads"
            app:layout_constraintTop_toBottomOf="@+id/tvViewsNumber" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvLikes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="52dp"
            android:layout_marginTop="16dp"
            android:text="@string/likes"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDownloads" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvLikesNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/tvLikes"
            app:layout_constraintTop_toBottomOf="@+id/tvDownloadsNumber" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvComments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="52dp"
            android:layout_marginTop="16dp"
            android:text="@string/comments"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvLikes" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCommentsNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/tvComments"
            app:layout_constraintTop_toBottomOf="@+id/tvLikesNumber" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/imageButtonDownload"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginBottom="36dp"
            android:background="@drawable/circle_background"
            android:src="@drawable/ic_download"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/progressBarDetails"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:background="@drawable/circle_background"
        android:progressTint="@color/white" />

</FrameLayout>

